Parses out the index page into 4 main components and some smaller bits.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "prettier.endOfLine": "lf",
-  "editor.formatOnSave": true
+  "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": true
+  },
 }
